📱  Fix menu position on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -116,7 +116,6 @@ h2 {
       left: 20px;
       top: 87px;
       flex: 1 1 100%;
-      height: 100%;
       align-self: center;
       text-align: center;
       padding: 0;
